# dazi2-android

./: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-apk.yml
.trae/rules/: project_rules.md
docs/: PRD.md  PROJECT_PLAN.md  TEST_REPORT.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.tauri/: tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/resources/charsets/: common-1.json  common-2.json  common-3.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: achievement.rs  charset.rs  checkin.rs  mod.rs  practice.rs  settings.rs  stats.rs
src/scripts/: api.ts  game.ts  main.ts  router.ts  store.ts
src/scripts/pages/: charsets.ts  game.ts  home.ts  profile.ts  stats.ts
src/styles/: main.css
