[package]
name = "typing-boost"
version = "1.0.0"
description = "打字提速 - 中文打字速度练习 App"
authors = ["typingboost"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "typing_boost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-haptics = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
parking_lot = "0.12"
once_cell = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
